Fix fonts not showing on safari
Needed an @import from google font

--- a/assets/base.css
+++ b/assets/base.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Bungee&display=swap');
 :root {
     
     --green: #c4e24e;
@@ -6,6 +7,6 @@
     --blue: #54a6d1;
     --light-blue: #97d8fe;
     --font-primary: 'Bungee';
-    --font-sans: -apple-system, system-ui, BlinkMacSystemFont, 'Helvetica Neue',
+    --font-sans: 'Bungee', -apple-system, system-ui, BlinkMacSystemFont, 'Helvetica Neue',
       'Helvetica', sans-serif;
   }
